--- a/style.css
+++ b/style.css
@@ -22,3 +22,37 @@ body {
     background-color: rgb(0, 0, 0);
     box-shadow: 2px 2px 2px rgb(59, 54, 54);
 }
+
+.traffic>.c1 {
+    position: absolute;
+    top: -10px;
+    left: -5px;
+    width: 40px;
+    height: 40px;
+    margin: 15px;
+    border: 2px red solid;
+    background-color: rgb(0, 0, 0);
+    border-radius: 100px;
+}
+
+.traffic>.c2 {
+    position: absolute;
+    top: 40px;
+    left: -5px;
+    width: 40px;
+    height: 40px;
+    margin: 15px;
+    border: 2px yellow solid;
+    background-color: rgb(0, 0, 0);
+    border-radius: 100px;
+}
+.traffic>.c3 {
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    bottom: 10px;
+    left: 10px;
+    border: 2px green solid;
+    background-color: rgb(0, 0, 0);
+    border-radius: 100px;
+}
