--- a/style.css
+++ b/style.css
@@ -56,3 +56,29 @@ body {
     background-color: rgb(0, 0, 0);
     border-radius: 100px;
 }
+
+.c1:hover {
+    background-color: red;
+    color: rgb(24, 12, 12);
+    border-color: red;
+    cursor: pointer;
+    box-shadow: 2px 2px 99px red;
+}
+
+.c2:hover {
+    background-color: yellow;
+    color: rgb(7, 4, 4);
+    border-color: yellow;
+    cursor: pointer;
+    box-shadow: 2px 2px 99px yellow;
+
+}
+
+.c3:hover {
+    background-color: green;
+    color: rgb(20, 10, 10);
+    border-color: green;
+    cursor: pointer;
+    box-shadow: 2px 2px 99px rgb(195, 233, 24);
+
+}
